# NavHub

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.example.toml  dev.sh  docker-compose.yaml  nginx.conf.template  package-lock.json  package.json
backend/: Cargo.toml  build.rs  clippy.json  clippy.txt  rustfmt.toml
backend/migrations/: 001_init.sql  002_seed.sql  003_messages.sql  004_icon_image_style.sql  005_group_push_targets.sql  006_update_icons_size_check.sql  007_icon_libraries.sql  008_group_allow_edit.sql  009_must_change_password.sql  010_message_expires.sql  011_drop_group_visibility.sql  012_indexes.sql  013_add_grid_xy.sql  014_icon_font_align.sql  015_wallpaper_sources.sql  016_remote_wallpapers.sql  017_seed_wallpapers.sql  018_bing_wallpaper_source.sql  019_fix_source_urls.sql  020_unsplash_source.sql  021_wallhaven_pexels_pixabay_sources.sql  022_icon_style_plain_default.sql  023_icon_asset_sources.sql  024_remote_icon_assets.sql  025_cleanup_and_indexes.sql  026_drop_duplicate_indexes.sql  027_update_pexels_wallpaper_source.sql  028_remote_wallpapers_dimensions.sql  029_seed_iconify_icon_sources.sql  029_update_wallpaper_source_quality_urls.sql  030_drop_unused_simpleicons_seed.sql  032_expires_partial_indexes.sql
backend/src/: cache.rs  config.rs  db.rs  error.rs  main.rs  request_id.rs  routes.rs  state.rs  storage.rs  tasks.rs
backend/src/auth/: casdoor.rs  middleware.rs  mod.rs  oidc.rs  password.rs  rate_limit.rs  session.rs  sso_cache.rs
backend/src/handlers/: auth.rs  favicon.rs  groups.rs  icons.rs  me.rs  me_export.rs  messages.rs  mod.rs  music.rs  prefs.rs  upload.rs  util.rs  (+3 more)
(+335 files in other folders)
