[package]
name = "navhub"
version = "0.1.10"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "compression-gzip", "set-header", "compression-zstd", "compression-br"] }
hyper = "1"

# Config
config = { version = "0.14", features = ["toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# DB
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Cache
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
deadpool-redis = "0.18"

# Auth
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
jsonwebtoken = "9"

# HTTP client for OIDC / favicon proxy
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"

# Error / Logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
dotenvy = "0.15"
mime_guess = "2"
url = "2"
urlencoding = "2"
async-trait = "0.1"
bytes = "1"
futures = "0.3"
sha2 = "0.11.0"
hex = "0.4.3"
infer = "0.19.0"
imagesize = "0.13"
scraper = "0.22"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
